全盘委托机制和内存屏障